build: Support Angular5, releases: 1.0.2

--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,3 @@
 {
-  "name": "ngx-webuploader",
-  "dependencies": {
-  },
-  "peerDependencies": {
-    "@angular/core": "*",
-    "@angular/common": "*"
-  }
+  "name": "ngx-webuploader"
 }
