--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "ngx-webuploader",
-  "version": "1.0.2",
-  "main": "index.js",
-  "typings": "index.d.ts",
-  "description": "Angular2.x for Baidu WebUploader",
+  "version": "7.0.0",
+  "description": "Angular for Baidu WebUploader",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cipchk/ngx-webuploader.git"
@@ -20,55 +18,52 @@
   },
   "homepage": "https://github.com/cipchk/ngx-webuploader#readme",
   "scripts": {
-    "demo.serve": "run-s build link demo.build",
-    "demo.gh-pages": "run-s build demo.build demo.deploy",
-    "demo.build": "ng build -prod",
-    "demo.deploy": "gh-pages -d demo/dist",
-    "link": "ngm link -p src --here",
-    "lint": "exit 0",
-    "build": "ngm build -p src --clean",
-    "build.watch": "ngm build -p src --watch --skip-bundles",
-    "pretest": "run-s lint build link",
-    "test": "ng test -sr",
-    "test-coverage": "ng test -sr -cc"
+    "lint": "tslint -p tsconfig.json -c tslint.json 'lib/*/*.ts'",
+    "test": "ng test --code-coverage --watch=false",
+    "site:build": "ng build --prod --build-optimizer",
+    "site:gh": "ng build --prod --build-optimizer --base-href /ngx-webuploader/ && gh-pages -d ./dist",
+    "build": "bash build.sh",
+    "release": "npm run build && cd publish && npm publish --access public"
   },
-  "dependencies": {},
-  "peerDependencies": {},
+  "dependencies": {
+    "@angular/animations": "~7.1.0",
+    "@angular/common": "~7.1.0",
+    "@angular/compiler": "~7.1.0",
+    "@angular/core": "~7.1.0",
+    "@angular/forms": "~7.1.0",
+    "@angular/platform-browser": "~7.1.0",
+    "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/router": "~7.1.0",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.3.3",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.26",
+    "ngx-bootstrap": "^3.1.3",
+    "ngx-highlight-js": "^2.1.1"
+  },
   "devDependencies": {
-    "@angular/cli": "^1.5.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "@types/webpack": "^3.0.14",
-    "codelyzer": "~3.2.0",
-    "core-js": "^2.4.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "@angular-devkit/build-ng-packagr": "^0.11.1",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "~7.1.1",
+    "@angular/compiler-cli": "~7.1.0",
+    "@angular/language-service": "~7.1.0",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.1.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ngm-cli": "^0.8.3",
-    "npm-run-all": "^4.1.1",
-    "ngx-bootstrap": "^2.0.0-beta.7",
-    "ngx-highlight-js": "^1.0.2",
-    "protractor": "~5.1.2",
-    "rxjs": "^5.5.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2",
-    "zone.js": "^0.8.14"
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.6",
+    "codecov": "^3.0.0",
+    "ng-packagr": "^4.4.5",
+    "tsickle": "^0.34.0"
   }
 }
